Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@
 \section{Motivating Examples} \label{examples}
 \input{secs/examples}
 
-\section{Problem Formulation}
+\section{Problem Formulation} \label{problem}
 \input{secs/problem}
 
 \section{Implementation}
