online is looking better

--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,7 @@
 \input{secs/offline}
 
 \subsection{Online: Fitting Functions to Examples}
-\input{secs/synth}
+\input{secs/online}
 
 \section{Evaluation}
 \input{secs/eval}
